--- a/jobs.html
+++ b/jobs.html
@@ -1,1 +1,38 @@
+<!DOCTYPE html>
+<html lang=”en-US”>
+<head>
+	<title>Eastern Excursions</title>
+	<meta charset="UTF-8">
+  	<meta name="description" content="Low Fares and Easy Booking make Eastern Excursions the Best Airline for Travel on the East Coast.">
+  	<meta name="keywords" content="Airplane,Airport,East Coast,Maryland,Eastern,Excursion,Flights,Travel,Vacation">
+  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="index.css" rel="stylesheet" type="text/css">
+  <script src="https://kit.fontawesome.com/88de9a263b.js" crossorigin="anonymous"></script>
+</head>
 
+<body>
+<nav>
+<ul>
+	<li><a href="index.html">Home</a></li>
+	<li><a href="flights.html">Flights</a></li>
+	<li><a href="programs.html">Programs</a></li>
+	<li><a href="jobs.html">Jobs</a></li>
+  <li><a href="about.html">About</a></li>
+</ul>
+</nav>
+<h1>Looking for a Job? Look no Further!</h1>
+<p>The Eastern Excursion website represents a fake discount airline serving Maryland and it's surrounding states. All information about the airline is <em>fictional</em> work designed for an 
+<a href="https://www.fbla-pbl.org/competitive-event/website-design-fbla/">FBLA Demonstration Event</a>.</p>
+
+<footer class="footer w3-container w3-center w3-opacity w3-margin-bottom">
+  <h5>Find Us On</h5>
+  <div class="w3-xlarge w3-padding-16">
+  <a href="https://www.facebook.com/EasternExcursions"><i class="fab fa-facebook w3-hover-opacity"></i></a>
+  <a href="https://www.twitter.com/EasternExcursions"><i class="fab fa-twitter w3-hover-opacity"></i></a>
+  <a href="https://www.instagram.com/EasternExcursions"><i class="fab fa-instagram w3-hover-opacity"></i></a>
+    <div><small>This website contains copyrighted materials used under the Multimedia Guidelines and Fair Use exemptions of U.S. Copyright law. Further use is prohibited.</small></div>
+</div>
+</footer>
+
+</body>
+</html>
