--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
     </ul>
 </ul>
 </div>
-<footer class="w3-container w3-center w3-opacity w3-margin-bottom">
+<footer class="footer w3-container w3-center w3-opacity w3-margin-bottom">
   <h5>Find Us On</h5>
   <div class="w3-xlarge w3-padding-16">
   <a href="https://www.facebook.com/EasternExcursions"><i class="fab fa-facebook w3-hover-opacity"></i></a>
