--- a/about.html
+++ b/about.html
@@ -12,12 +12,12 @@
 
 <body>
 <nav>
-<ul>
-	<li><a href="index.html">Home</a></li>
-	<li><a href="flights.html">Flights</a></li>
-	<li><a href="programs.html">Programs</a></li>
-	<li><a href="jobs.html">Jobs</a></li>
-  <li><a href="about.html">About</a></li>
+<ul class="nav">
+	<li class="nav"><a href="index.html">Home</a></li>
+	<li class="nav"><a href="flights.html">Flights</a></li>
+	<li class="nav"><a href="programs.html">Programs</a></li>
+	<li class="nav"><a href="jobs.html">Jobs</a></li>
+  <li class="nav"><a href="about.html">About</a></li>
 </ul>
 </nav>
 <h1>About</h1>
