--- a/jobs.html
+++ b/jobs.html
@@ -4,7 +4,7 @@
 	<title>Eastern Excursions</title>
 	<meta charset="UTF-8">
   	<meta name="description" content="Low Fares and Easy Booking make Eastern Excursions the Best Airline for Travel on the East Coast.">
-  	<meta name="keywords" content="Airplane,Airport,East Coast,Maryland,Eastern,Excursion,Flights,Travel,Vacation">
+  	<meta name="keywords" content="Airplane,Airport,East Coast,Maryland,Eastern,Excursion,Flights,Travel,Vacation,Jobs,Careers">
   	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="index.css" rel="stylesheet" type="text/css">
   <script src="https://kit.fontawesome.com/88de9a263b.js" crossorigin="anonymous"></script>
@@ -12,18 +12,29 @@
 
 <body>
 <nav>
-<ul>
-	<li><a href="index.html">Home</a></li>
-	<li><a href="flights.html">Flights</a></li>
-	<li><a href="programs.html">Programs</a></li>
-	<li><a href="jobs.html">Jobs</a></li>
-  <li><a href="about.html">About</a></li>
+<ul class="nav">
+	<li class="nav"><a href="index.html">Home</a></li>
+	<li class="nav"><a href="flights.html">Flights</a></li>
+	<li class="nav"><a href="programs.html">Programs</a></li>
+	<li class="nav"><a href="jobs.html">Jobs</a></li>
+  <li class="nav"><a href="about.html">About</a></li>
 </ul>
 </nav>
-<h1>Looking for a Job? Look no Further!</h1>
-<p>The Eastern Excursion website represents a fake discount airline serving Maryland and it's surrounding states. All information about the airline is <em>fictional</em> work designed for an 
-<a href="https://www.fbla-pbl.org/competitive-event/website-design-fbla/">FBLA Demonstration Event</a>.</p>
-
+<h1>Jobs with Eastern Excursions</h1>
+<p style="color:#2f2f2f;font-style:italic;font-family:Palatino,Arial;font-size:20px;">We aren't just an airline. We are a <em>community</em>.</p>
+<p><img src="images/happyWorkers1.jpg" alt="Happy Workers" style="max-width:100%;max-height:100%">
+<img src="images/happyWorkers2.jpg" alt="More Happy Workers" style="max-width:100%;max-height:100%">
+</p>
+<div>
+<p>
+Eastern Excursions offer many different careers, employing over 10,000 in various locations within the East Coast. Our employees are treated equally, and are given many benefits, including significantly reduced flying costs, relocation benefits, and healthcare coverage. Is there any reason <em>not</em> to work with Eastern Excursion? The answer is no.
+</p>
+</div>
+<div>
+<p style="color:#2f2f2f;font-style:italic;font-family:Palatino,Arial;font-size:20px;">
+Excited to work for the best airline in the East Coast? Click <a href="apply.html">here</a> to apply for myriad careers!
+</p>
+</div>
 <footer class="footer w3-container w3-center w3-opacity w3-margin-bottom">
   <h5>Find Us On</h5>
   <div class="w3-xlarge w3-padding-16">
