--- a/jobs.html
+++ b/jobs.html
@@ -4,7 +4,7 @@
 	<title>Eastern Excursions</title>
 	<meta charset="UTF-8">
   	<meta name="description" content="Low Fares and Easy Booking make Eastern Excursions the Best Airline for Travel on the East Coast.">
-  	<meta name="keywords" content="Airplane,Airport,East Coast,Maryland,Eastern,Excursion,Flights,Travel,Vacation,Jobs,Careers">
+  	<meta name="keywords" content="Airplane,Airport,East Coast,Maryland,Eastern,Excursion,Flights,Travel,Vacation">
   	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="index.css" rel="stylesheet" type="text/css">
   <script src="https://kit.fontawesome.com/88de9a263b.js" crossorigin="anonymous"></script>
@@ -32,7 +32,7 @@ Eastern Excursions offer many different careers, employing over 10,000 in variou
 </div>
 <div>
 <p style="color:#2f2f2f;font-style:italic;font-family:Palatino,Arial;font-size:20px;">
-Excited to work for the best airline in the East Coast? Click <a href="apply.html">here</a> to apply for myriad careers!
+Excited to work for the best airline in the East Coast? Click <a href="apply.html" target="_blank">here</a> to apply for myriad careers!
 </p>
 </div>
 <footer class="footer w3-container w3-center w3-opacity w3-margin-bottom">
