--- a/apply.html
+++ b/apply.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-
+	<a href="jobs.html">Back</a>
 <h1>Apply for a Career with Eastern Excursion</h1>
 <p>
 Please fill out the form below to submit your application.
