--- a/programs.html
+++ b/programs.html
@@ -1,1 +1,51 @@
+<!DOCTYPE html>
+<html lang=”en-US”>
+<head>
+	<title>Eastern Excursions</title>
+	<meta charset="UTF-8">
+  	<meta name="description" content="Low Fares and Easy Booking make Eastern Excursions the Best Airline for Travel on the East Coast.">
+  	<meta name="keywords" content="Airplane,Airport,East Coast,Maryland,Eastern,Excursion,Flights,Travel,Vacation">
+  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="index.css" rel="stylesheet" type="text/css">
+  <script src="https://kit.fontawesome.com/88de9a263b.js" crossorigin="anonymous"></script>
+</head>
 
+<body>
+<a href="programs.html">Back</a>
+<h1>Programs</h1>
+<p>
+Eastern Excursions is committed to providing the best experience for all of our beloved customers. That's why we created the <i><b>Eastern Envoy</b></i> program! Become a member for free and earn even more discounts, as well as copious miles.
+</p>
+<h2>Benefits:</h2>
+<ul>
+  <li>Earn <em>10,000 miles</em> just for signing up!</li>
+  <li>Get bonus miles each time you travel to a new location.</li>
+  <li>Redeem miles for premium transportation, hotels, or free goodies at the airport!</li>
+  <li>Miles never expire.</li>
+  <li>Get access to even more discounted flights, including consistent seasonal savings for frequent vacationers.</li>
+  <li>Event Forgiveness: We won't penalize you if you missed a flight!*</li>
+</ul>
+
+<p><a href="loyalty.html">Sign Up Here</a> to get instant access to our generous program.<br>
+<br>Already have an account? Log in below:</p>
+<form action="/action_page.php">
+    Username:<span style="color:red" title="Required">*</span>:<br>
+    <input type="text" name="username" value="" required><br>
+    Password:<span style="color:red" title="Required">*</span>:<br>
+    <input type="password" name="password" value="" required><br><br>
+    <input type="submit" value="Submit">
+</form>
+<br><br>
+<small>*Event Forgiveness is only given after proper justification is provided by the customer</small>
+<footer class="footer w3-container w3-center w3-opacity w3-margin-bottom">
+  <h5>Find Us On</h5>
+  <div class="w3-xlarge w3-padding-16">
+  <a href="https://www.facebook.com/EasternExcursions"><i class="fab fa-facebook w3-hover-opacity"></i></a>
+  <a href="https://www.twitter.com/EasternExcursions"><i class="fab fa-twitter w3-hover-opacity"></i></a>
+  <a href="https://www.instagram.com/EasternExcursions"><i class="fab fa-instagram w3-hover-opacity"></i></a>
+    <div><small>This website contains copyrighted materials used under the Multimedia Guidelines and Fair Use exemptions of U.S. Copyright law. Further use is prohibited.</small></div>
+</div>
+</footer>
+
+</body>
+</html>
