--- a/programs.html
+++ b/programs.html
@@ -11,7 +11,16 @@
 </head>
 
 <body>
-<a href="programs.html">Back</a>
+<nav>
+<ul class="nav">
+	<li class="nav"><a href="index.html">Home</a></li>
+	<li class="nav"><a href="flights.html">Flights</a></li>
+	<li class="nav"><a href="programs.html">Programs</a></li>
+	<li class="nav"><a href="jobs.html">Jobs</a></li>
+  <li class="nav"><a href="about.html">About</a></li>
+</ul>
+</nav>
+
 <h1>Programs</h1>
 <p>
 Eastern Excursions is committed to providing the best experience for all of our beloved customers. That's why we created the <i><b>Eastern Envoy</b></i> program! Become a member for free and earn even more discounts, as well as copious miles.
