--- a/about.html
+++ b/about.html
@@ -28,7 +28,8 @@
 <ul>
   <li><a href="https://www.w3schools.com/default.asp">w3schools</a> was used for information on how to write HTML/CSS. Website structure is based off w3school's HTML and CSS tutorials. The
   website also uses <a href="https://www.w3schools.com/w3css/default.asp">W3CSS</a>, a CSS Framework by w3schools.</li>
-  <li>Images shown were either taken by the author or used under the Multimedia Guidelines and Fair Use exemptions of U.S. Copyright law. Images were lawfully used from:</li>
+	<li>a href="https://codepen.io/">CodePen</a> was consulted as a resource for JavaScript.
+	<li>Images shown were either taken by the author or used under the Multimedia Guidelines and Fair Use exemptions of U.S. Copyright law. Images were lawfully used from:</li>
     <ul>
 	<li><a href="https://www.pngfly.com/">PNGFly</a></li>
     	<li><a href="https://creativecommons.org/">Creative Commons</a></li>
