--- a/loyalty.html
+++ b/loyalty.html
@@ -1,1 +1,69 @@
+<!DOCTYPE html>
+<html lang=”en-US”>
+<head>
+	<title>Eastern Excursions</title>
+	<meta charset="UTF-8">
+  	<meta name="description" content="Low Fares and Easy Booking make Eastern Excursions the Best Airline for Travel on the East Coast.">
+  	<meta name="keywords" content="Airplane,Airport,East Coast,Maryland,Eastern,Excursion,Flights,Travel,Vacation">
+  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="index.css" rel="stylesheet" type="text/css">
+  <script src="https://kit.fontawesome.com/88de9a263b.js" crossorigin="anonymous"></script>
+</head>
 
+<body>
+
+<a href="programs.html">Back</a>
+<h1>
+Sign Up to become an Eastern Envoy
+</h1>
+<form action="/action_page.php">
+    First name<span style="color:red" title="Required">*</span>:<br>
+    <input type="text" name="firstname" size="60" value="" required><br>
+    Last name<span style="color:red" title="Required">*</span>:<br>
+    <input type="text" name="lastname" size="60" value="" required><br>
+    Middle name:<br>
+    <input type="text" name="middlename" size="60" value=""><br>
+    Sex<span style="color:red" title="Required">*</span>:<br>
+    <input type="radio" name="gender" value="male" required> Male<br>
+    <input type="radio" name="gender" value="female"> Female<br>
+    <input type="radio" name="gender" value="other"> Other<br>
+     <input type="radio" name="gender" value="no"> Prefer not to say<br>
+    Email<span style="color:red" title="Required">*</span>:<br>
+    <input type="email" name="email" size="60" value="" required><br>
+    Phone Number<span style="color:red" title="Required">*</span>:<br>
+    <input type="tel" name="phone" value="" required><br>
+    Username<span style="color:red" title="Required">*</span>:<br>
+    <input type="text" name="username" value="" required><br>
+    Password:<span style="color:red" title="Required">*</span>:<br>
+    <input type="password" id="password" name="password" value="" required><br><br>
+    Password Confirmation:<span style="color:red" title="Required">*</span>:<br>
+    <input type="password" id="confirmPassword" name="confpassword" value="" required><br><br>
+    <input type="submit" value="Sign Up">
+</form>
+
+<script>var password = document.getElementById("password")
+  , confirmPassword = document.getElementById("confirmPassword");
+
+function validatePassword(){
+  if(password.value != confirmPassword.value) {
+    confirmPassword.setCustomValidity("Passwords Don't Match");
+  } else {
+    confirmPassword.setCustomValidity('');
+  }
+}
+
+password.onchange = validatePassword;
+confirmPassword.onkeyup = validatePassword;</script>
+
+<footer class="footer w3-container w3-center w3-opacity w3-margin-bottom">
+  <h5>Find Us On</h5>
+  <div class="w3-xlarge w3-padding-16">
+  <a href="https://www.facebook.com/EasternExcursions"><i class="fab fa-facebook w3-hover-opacity"></i></a>
+  <a href="https://www.twitter.com/EasternExcursions"><i class="fab fa-twitter w3-hover-opacity"></i></a>
+  <a href="https://www.instagram.com/EasternExcursions"><i class="fab fa-instagram w3-hover-opacity"></i></a>
+    <div><small>This website contains copyrighted materials used under the Multimedia Guidelines and Fair Use exemptions of U.S. Copyright law. Further use is prohibited.</small></div>
+</div>
+</footer>
+
+</body>
+</html>
